<resources>
    <string name="app_name">FacturaLetras</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingresar">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="letras">Letras</string>
    <string name="nombre">Nombre</string>
    <string name="agregarletra">Agregar Letra</string>
    <string name="monto">Monto</string>
    <string name="registrar">Registrar</string>
    <string name="factura">Factura</string>
    <string name="agregarfactura">Agregar Factura</string>
    <string name="fecha">Fecha</string>
    <string name="numeroletra">N° de Letras</string>
    <string name="confirmar">Confirmar</string>
    <string name="id">DNI o RUC</string>
    <string name="pagar">Pagar</string>
    <string name="editar">Editar</string>
    <string name="cancelar">Cancelar</string>
    <string name="descargar">Descargar</string>
    <string name="banco">Banco:</string>
    <string name="moneda">Moneda:</string>
    <string name="proveedor">Proveedor:</string>
    <string name="letra">Letra</string>
    <string name="telefono">Telefono</string>
    <string name="empresa">Empresa</string>
    <string name="estado">Estado</string>
    <string name="moneda0">Moneda</string>
    <string name="pagados">Pagados</string>
    <string name="debidos">Debidos</string>
    <string name="pagado">Pagado</string>
    <string name="debido">Debido</string>
    <string name="conteo">Conteo</string>
    <string name="numerofactura">N° de Facturas</string>
    <string name="descripcion">Descripcion</string>
    <string name="operacion">Operacion</string>
    <string name="cliente">Cliente</string>
    <string name="notifications_admin_channel_name">oreoplus</string>
    <string name="notifications_admin_channel_description">oreoplus1</string>
    <string name="activo">Activo</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="codigo">Codigo</string>
    <string name="codverante">Ingrese el codigo de verificacion anterior</string>
    <string name="codvernew">Ingrese el nuevo codigo de verificacion</string>
    <string name="codvernew1">Vuelva a ingresar el codigo de verificacion</string>
</resources>
