<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             tools:context=".Fragments.DialogsFragment.AddFacturaDF">
    <TextView
            android:text="@string/agregarfactura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/proveedores"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/proveedores" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toTopOf="@+id/proveedor"/>
    <TextView
            android:text="@string/proveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textProveedor" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/proveedores"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toStartOf="@+id/proveedor"
            android:layout_marginEnd="8dp" android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout6" android:layout_marginBottom="8dp"
            tools:visibility="visible"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/proveedor" android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/proveedores"
            app:layout_constraintStart_toEndOf="@+id/textProveedor"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout6" android:layout_marginBottom="8dp"
            tools:visibility="visible"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout6"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/proveedor"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout7">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/factura" android:id="@+id/factura"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout7"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            app:layout_constraintBottom_toTopOf="@+id/monedas">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/monto" android:id="@+id/monto"/>
    </android.support.design.widget.TextInputLayout>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/monedas"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
            app:layout_constraintBottom_toTopOf="@+id/moneda"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textMoneda" android:textSize="18sp"
            android:text="@string/moneda" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/monedas"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toStartOf="@+id/moneda"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout8" android:layout_marginBottom="8dp"
            tools:visibility="visible"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/moneda" android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/monedas"
            android:layout_marginTop="8dp" app:layout_constraintStart_toEndOf="@+id/textMoneda"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout8" android:layout_marginBottom="8dp"
            tools:visibility="visible"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/textInputLayout8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/moneda"
            app:layout_constraintBottom_toTopOf="@+id/bancos">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numeroletra" android:id="@+id/numero"/>
    </android.support.design.widget.TextInputLayout>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bancos" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textBanco"/>
    <TextView
            android:text="@string/banco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textBanco" android:textSize="18sp" app:layout_constraintEnd_toStartOf="@+id/banco"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/bancos"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cancelar" tools:visibility="visible"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:id="@+id/banco"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/bancos"
            android:layout_marginTop="8dp" android:textSize="18sp" app:layout_constraintStart_toEndOf="@+id/textBanco"
            app:layout_constraintBottom_toTopOf="@+id/registrar" tools:visibility="visible"/>
    <Button
            android:text="@string/registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/cancelar" android:layout_marginStart="4dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/banco"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelar" app:layout_constraintEnd_toStartOf="@+id/registrar"
            android:layout_marginEnd="4dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textBanco" android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>