<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   tools:context=".Fragments.DialogsFragment.ActUsuDF">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:cardBackgroundColor="#230E0D0D" app:cardCornerRadius="4dp" android:id="@+id/cardView4"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/estado">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textEmprClie0" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/textEmprClie1"
                    android:layout_marginEnd="8dp" android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView50" android:text="@string/nombre"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textEmprClie1"
                    app:layout_constraintStart_toEndOf="@+id/textEmprClie0"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/activo" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/activo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView50" app:layout_constraintEnd_toStartOf="@+id/activo"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textEmprClie0"
                    android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/activo"
                    app:layout_constraintTop_toBottomOf="@+id/textEmprClie1"
                    app:layout_constraintStart_toEndOf="@+id/textView50"
                    android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/estado" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView4"
            app:layout_constraintBottom_toTopOf="@+id/actualizar"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actualizar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/estado"/>

</androidx.constraintlayout.widget.ConstraintLayout>